# area_under_curve

./: .gitignore  .pylintrc  .pypirc  README.md  README.rst  index.html  lint.sh  manifest.in  pack.bat  pack.sh  pyproject.toml  readme.rst  rst.sh  setup.py  test.sh  upload.bat  upload.sh
area_under_curve/: __init__.py  area_under_curve.py  test.py  unit_test.py
tests/: demo.py  unit_test.py
