[tool.poetry]
name = "area_under_curve"
version = "1.0.6"
description = "area_under_curve"
authors = ["Steven Mycynek"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
coverage = "^5.0.1"
pytest = "^5.3.2"
twine = "^3.1.1"
wheel = "^0.33.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
